[tool.poetry]
name = "repl_pygame_Gui-Test-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PySimpleGUI = "^4.45.0"
BaseHash = "^3.0.8"
djangoapps-bases = "^0.2"
python-baseconv = "^1.2.2"
cbor2 = "^5.4.1"
flunn = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
